--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           เพื่อพัฒนาทักษะและสร้างเว็บไซต์ที่ดีขึ้น ตอนนี้ผมกำลังมองหาโอกาสในการทำงานที่ท้าทายเพื่อเติบโตในสายอาชีพนี้
         </p>
         <div class="ds-button-sec text-center">
-          <a href="#" class="ds-button">Download Resume</a>
+          <a href="assets/images/krittanai CV resume (1).pdf" class="ds-button">Download Resume</a>
         </div>
       </section>
     </div>
