--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           เพื่อพัฒนาทักษะและสร้างเว็บไซต์ที่ดีขึ้น ตอนนี้ผมกำลังมองหาโอกาสในการทำงานที่ท้าทายเพื่อเติบโตในสายอาชีพนี้
         </p>
         <div class="ds-button-sec text-center">
-          <a href="assets/images/krittanai CV resume (1).pdf" class="ds-button">Download Resume</a>
+          <a href="assets/images/blue professional modern CV resume (1).pdf" class="ds-button">Download Resume</a>
         </div>
       </section>
     </div>
@@ -324,7 +324,7 @@
         <span>ข้อมูลติดต่อ</span>
         <h4>Krttanai Suyana</h4>
         <p>สามารถดูข้อมูลเพิ่มเติมได้ที่นี้</p>
-        <a href="assets/images/krittanai CV resume (1).pdf" class="ds-button">Download Resume</a>
+        <a href="assets/images/blue professional modern CV resume (1).pdf" class="ds-button">Download Resume</a>
       </section>
     
     </div>
